--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 
 <body>
-    <p>this is the first paragraph</p>
+    <p>this is the first paragraph of this page</p>
+    <p> this is the second pragraph</p>
 </body>
 </html>
